--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+  "name": "trivia-server",
+  "version": "1.0.0",
+  "description": "Trivia game server",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "prestart": "npm install",
+    "seed": "node database/seed.js",
+    "docker:build": "docker build -t trivia-server .",
+    "docker:run": "docker run -p 3001:3001 trivia-server"
+  },
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
@@ -8,5 +22,10 @@
     "http": "^0.0.1-security",
     "mongoose": "^8.14.2",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "eslint": "^9.3.0",
+    "jest": "^29.7.0"
   }
 }
